--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     // picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
 
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
+
 }
